--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 #default server port 8080
 #server.port=9090
 
+jwt.token.secret=u61yegh2vtyeft2yegui2ehd7ugydvyh2veyt12fye
+jwt.expiration.millis=90000
+
 
