Security Features added

--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 #server.port=9090
 
 jwt.token.secret=u61yegh2vtyeft2yegui2ehd7ugydvyh2veyt12fye
-jwt.expiration.millis=90000
+jwt.token.expiration.millis=90000
 
 
