--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Bankify
 #DB config
 spring.datasource.url=jdbc:mysql://localhost:3306/backend?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=manager
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 #default server port 8080
 #server.port=9090
 
-jwt.token.secret=u61yegh2vtyeft2yegui2ehd7ugydvyh2veyt12fye
+jwt.token.secret=ThisIsASuperSecretKeyForJWTs123456!
 jwt.token.expiration.millis=90000
 
 
