--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 #server.port=9090
 
 jwt.token.secret=ThisIsASuperSecretKeyForJWTs123456!
-jwt.token.expiration.millis=900000
+jwt.token.expiration.millis=9000000
 
 
