Did Some Changes

--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#default server port 8080
-#server.port=9090
+
+server.port=9090
 
 jwt.token.secret=ThisIsASuperSecretKeyForJWTs123456!
 jwt.token.expiration.millis=900000
