--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Bankify
 
 #DB config
 spring.datasource.url=jdbc:mysql://localhost:3306/backend?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=D4_92563_Samruddha
+spring.datasource.username=root
 spring.datasource.password=manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
