otp functionality added by mail sender

--- a/Server/Bankify/src/main/resources/application.properties
+++ b/Server/Bankify/src/main/resources/application.properties
@@ -12,7 +12,17 @@ spring.jpa.hibernate.ddl-auto=update
 #default server port 8080
 #server.port=9090
 
+
+# java mail service configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=shiv8305654696@gmail.com
+spring.mail.password=kdgcqaqbomzudisf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true 
+spring.mail.properties.mail.smtp.starttls.required=true
+
 jwt.token.secret=ThisIsASuperSecretKeyForJWTs123456!
-jwt.token.expiration.millis=9000000
+jwt.token.expiration.millis=900000
 
 
