--- a/Logger/BankifyLogger/Dockerfile
+++ b/Logger/BankifyLogger/Dockerfile
@@ -1,26 +1,28 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-nanoserver-1809 AS base
-WORKDIR /app
-EXPOSE 8080
-
-FROM mcr.microsoft.com/dotnet/sdk:8.0-nanoserver-1809 AS build
-ARG BUILD_CONFIGURATION=Release
+# -----------------------------
+# Build Stage
+# -----------------------------
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["BankifyLogger.csproj", "."]
-RUN dotnet restore "./././BankifyLogger.csproj"
+
+# Copy project file and restore dependencies
+COPY *.csproj ./
+RUN dotnet restore
+
+# Copy source and publish
 COPY . .
-WORKDIR "/src/."
-RUN dotnet build "./BankifyLogger.csproj" -c %BUILD_CONFIGURATION% -o /app/build
+RUN dotnet publish -c Release -o /app/publish
 
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./BankifyLogger.csproj" -c %BUILD_CONFIGURATION% -o /app/publish /p:UseAppHost=false
-
-FROM base AS final
+# -----------------------------
+# Runtime Stage
+# -----------------------------
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
 WORKDIR /app
-COPY --from=publish /app/publish .
+
+# Copy published output
+COPY --from=build /app/publish .
+
+# Expose the port your API listens on
+EXPOSE 5000
+
+# Start the application
 ENTRYPOINT ["dotnet", "BankifyLogger.dll"]
