--- a/Server/Bankify/Dockerfile
+++ b/Server/Bankify/Dockerfile
@@ -1,9 +1,24 @@
-FROM eclipse-temurin:17-jdk-alpine
-
+# ------------------------
+# Build stage
+# ------------------------
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
-COPY target/Bankify-0.0.1-SNAPSHOT.jar app.jar
+# Cache dependencies
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+# Copy source and build
+COPY . .
+RUN mvn clean package -DskipTests
+
+# ------------------------
+# Run stage
+# ------------------------
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+
+COPY --from=build /app/target/Bankify-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
-
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
